ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/CnP_PaaS__CnP_Designer__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Designer</label>
    <nameField>
        <label>C&amp;P Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Designer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>