ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/fields/CnP_PaaS__Pdf__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Pdf__c</fullName>
    <label>PDF Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>