ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/fields/CnP_PaaS__Pdf_include__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Pdf_include__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pdf include</label>
    <type>Checkbox</type>
</CustomField>