ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/fields/CnP_PaaS__SalesForce_Public_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SalesForce_Public_Site_URL__c</fullName>
    <label>SalesForce Public Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>