ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/fields/CnP_PaaS__Select_Template_Cat__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Select_Template_Cat__c</fullName>
    <label>Template Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>