ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Designer__c/fields/CnP_PaaS__Template_Layout_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Template_Layout_Name__c</fullName>
    <label>Template Layout Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>